[gd_scene load_steps=6 format=3 uid="uid://fry7m2176yb3"]

[ext_resource type="Script" path="res://Scripts/Items/projectile.gd" id="1_lo0uf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wuxwj"]
albedo_color = Color(0.501961, 0.25098, 0.12549, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_dx62b"]
material = SubResource("StandardMaterial3D_wuxwj")
top_radius = 0.025
bottom_radius = 0.025
height = 0.75

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gi8fv"]
radius = 0.025
height = 0.75

[sub_resource type="SphereShape3D" id="SphereShape3D_8krr4"]
radius = 0.05

[node name="Bolt" type="RigidBody3D"]
transform = Transform3D(1, 0, 1.95399e-14, 0, 1, 0, -1.95399e-14, 0, 1, 0, 0, 0)
collision_layer = 0
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_lo0uf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.375)
mesh = SubResource("CylinderMesh_dx62b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.375)
shape = SubResource("CapsuleShape3D_gi8fv")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Hit Box" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hit Box"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.7)
shape = SubResource("SphereShape3D_8krr4")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Hit Box" to="." method="_on_hit_box_area_entered"]
